operator/pkg/gateway-api/testdata/gateway/listenerset-dual-parentref-independence/output/listenerset-ls-dual-parentref.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  creationTimestamp: null
  name: ls-dual-parentref
  namespace: gateway-conformance-infra
  resourceVersion: "999"
spec:
  parentRef:
    name: gateway-dual-parentref
    namespace: gateway-conformance-infra
  listeners:
    - name: ls-dual-parentref-listener
      port: 8080
      protocol: HTTP
      hostname: ls-dual.com
      allowedRoutes:
        namespaces:
          from: Same
status:
  conditions:
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: ListenerSet is accepted
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: ListenerSet is programmed
      reason: Programmed
      status: "True"
      type: Programmed
  listeners:
    - attachedRoutes: 2
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Programmed
          reason: Programmed
          status: "True"
          type: Programmed
      name: ls-dual-parentref-listener
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
